# python-sjsclient

./: .coveragerc  .gitignore  .testr.conf  .travis.yml  LICENSE  README.rst  requirements.txt  run_functional_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
ci/: Dockerfile.test  application.conf  deploy_sjs.sh  run_ft_in_docker.sh  start.sh
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/ref/: index.rst
sjsclient/: app.py  base.py  client.py  context.py  exceptions.py  job.py  utils.py
sjsclient/cmdline/: context.py  job.py  main.py  utils.py
sjsclient/tests/: test_sjsclient.py
sjsclient/tests/functional/: base.py  test_app.py  test_context.py  test_job.py
sjsclient/tests/unit/: test_app.py  test_base.py  test_client.py  test_context.py  test_exceptions.py  test_job.py
