[metadata]
name = python-sjsclient
summary = Python client for Spark Jobserver
description-file =
    README.rst
author = Noorul Islam K M
author-email = noorul@noorul.com
home-page = http://github.com/spark-jobserver/python-sjsclient
classifier =
    Environment :: Spark Jobserver
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    sjsclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sjsclient/locale
domain = python-sjsclient

[update_catalog]
domain = python-sjsclient
output_dir = sjsclient/locale
input_file = sjsclient/locale/python-sjsclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sjsclient/locale/python-sjsclient.pot
